Homework7/manifests/UserService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework7userservice
  labels:
    app: homework7userservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework7userservice
  template:
    metadata:
      labels:
        app: homework7userservice
    spec:
      containers:
      - name: homework7userservice
        image: flash1200/homework7_userservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
